Blog Gastranomico Foundation
Contenido y Comentarios

--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogFoundationGastronomia/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogFoundationGastronomia/index.html
@@ -75,6 +75,142 @@
   				</aside>
 
   			</section >
+        <section class="column small-12 medium-7 large-8 margin-top-1" id="section2">
+
+				<article class="card padding-1 contenido">
+
+					<div class="row">
+
+						<div class="column small-12">
+							<h4>Bollito de Maíz </h4>
+							<strong>25/07/2018, Puerto Ordaz</strong>
+							<img src="img/bollo.jpg">
+							<p class="text-justify margin-top-1">
+								El jojoto tierno es la base de muchas preparaciones en nuestra hermosa tierra, aquí amamos las masas a base de maíz, las cachapas, arepas, hallaquitas, bollitos, hallacas son todas diversas derivaciones de los procesos que tiene el maíz, en el caso del maíz tierno y amarillo lo usamos como baso para la cachapa, que se hace en budare y se rellena o para hacer la cachapa de hoja, que es el resultado de una masa que se envuelve en la misma hoja del jojoto tierno y se amarra para que no se salga la masa del interior mientras se cocina en agua hirviendo.<br><br>
+								Esta versión es la que llamamos también hallaquitas de jojoto, son en realidad dulzonas, pues nuestro maíz tierno es de sabor suave y se combina deliciosamente con un poco de dulce, luego al estar listas su sabor se realza con un poco de mantequilla y queso, son riquísimas para el desayuno.<br><br>
+								Ingredientes:<br>
+								15 jojotos grandes y no muy tiernos<br>
+								5 cucharadas de azúcar<br>
+								1 cda. de sal<br>
+								Anís en pepita si se quiere<br>
+								1 cda. de mantequilla<br>
+								150 grs. de queso blanco rallado<br>
+								½ taza de leche<br><br>
+								Preparación<br>
+								Se sacan las hojas de los jojotos, tratando de que se rompan lo menos posible, se lavan y se reservan.
+								Los jojotos se desgranan y se muelen en un molino o procesador hasta que queden muy finos, una vez molido se le añaden los demás ingredientes, se amasan y se envuelven en las hojas, se amarran en las puntas, se doblan y se vuelven a amarrar por la mitad y se cocinan en agua con sal, cuando abomben y endurezcan un poco ya están.<br><br>
+							</p>
+						</div>
+
+					</div>
+
+					<div class="comentarios row column padding-top-1">
+						  <fieldset>
+								<legend>Deja tus comentarios:</legend>
+								<textarea class="margin-bottom-0"></textarea>
+								<div class="text-right"><button type="submit" name="enviar" class="success button margin-top-0"><i class="step fi-pencil"></i> Publicar</button></div>
+						  </fieldset>
+					</div>
+
+					<div class="usuario card">
+
+						<div class="row">
+							<div class="column small-2 align-middle margin-horizontal-0">
+								<img src="img/avat8.png" class="comentario-img">
+							</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0">Aquilino33: Se puede rellenar con Chorizo??</div>
+						</div>
+
+					</div>
+
+					<div class="usuario card">
+
+						<div class="row">
+							<div class="column small-2 align-middle margin-horizontal-0">
+								<img src="img/avat3.png" class="comentario-img">
+							</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0">FercyzK: Los mejores los hace la tia de Natasha</div>
+						</div>
+
+					</div>
+
+					<div class="usuario card">
+
+						<div class="row">
+							<div class="column small-2 align-middle margin-horizontal-0">
+								<img src="img/avat7.png" class="comentario-img">
+							</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0">NatashaJones: Esa receta me la dio mio tia y la compartí en el Blog</div>
+						</div>
+
+					</div>
+
+				</article>
+
+				<article class="card padding-1 contenido">
+
+					<div class="row">
+
+						<div class="column small-12">
+							<h4>Ossobuco</h4>
+							<strong>16/05/2018, Puerto Ordaz</strong>
+							<img src="img/osso.jpg">
+							<p class="text-justify margin-top-1">
+								El ossobuco alla milanese (a veces se escribe como osso buco, en italiano ‘hueso [con] hueco’; esta palabra compuesta se encuentra castellanizada como osobuco)1 es un plato tradicional de la cocina italiana que se puede encontrar en Milán (capital de Lombardía), ciudad de Italia, de donde es originario.2 Desde la segunda mitad del siglo XX se ha convertido en un plato también muy frecuente en diversas partes del mundo.<br><br>
+								Para esta receta necesitaremos 200 gramos de cebolla larga, cuatro tomates medianos, una cebolla blanca, una pizca de pasta de ajo, una pizca de comino, una pizca de sal y una pizca de pimienta<br><br>
+								Se trata de un guiso preparado con jarrete de ternera, corte transversal del corvejón de la res, en rodajas de gran grosor (de al menos 3 cm) y sin deshuesar. A menudo se sirve acompañado de risotto (una preparación de arroz), por regla general risotto alla milanese.<br><br>
+								El ossobuco se elabora estofando la pieza de carne lentamente (cerca de dos horas) en vino blanco para que se aromatice, y finalizando la cocción en una salsa de tomate y otras verduras (cebolla, zanahoria, apio, etc.). Algunas recetas emplean caldo de carne en su lugar. Se ha de servir la carne con el hueso y su médula. Generalmente se acompaña con arroz (que puede ser algún tipo de risotto) o algunas verduras cocidas.<br><br>
+								Una variante tradicional en la cocina italiana se denomina ossobuco a la gremolata. Se prepara sin tomate y se le acompaña de la famosa salsa gremolata (compuesta de ajo, piel de limón y diversas hierbas). Otra variante es el ossobuco coi piseli (con guisantes).<br><br>
+								¡Deben probarlo!
+							</p>
+						</div>
+
+					</div>
+
+					<div class="comentarios row column padding-top-1">
+						  <fieldset>
+								<legend>Deja tus comentarios:</legend>
+								<textarea class="margin-bottom-0"></textarea>
+								<div class="text-right"><button type="submit" name="enviar" class="success button margin-top-0"><i class="step fi-pencil"></i> Publicar</button></div>
+						  </fieldset>
+					</div>
+
+					<div class="usuario card">
+
+						<div class="row">
+							<div class="column small-2 align-middle margin-horizontal-0">
+								<img src="img/avat2.png" class="comentario-img">
+							</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0">UlisesT: Se ve excelente, donode puedo probar esa exquisites?</div>
+						</div>
+
+					</div>
+
+					<div class="usuario card">
+
+						<div class="row">
+							<div class="column small-2 align-middle margin-horizontal-0">
+								<img src="img/avat6.png" class="comentario-img">
+							</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0">ChompiraX: Alguna receta sobre ese manjar?</div>
+						</div>
+
+					</div>
+
+					<div class="usuario card">
+
+						<div class="row">
+							<div class="column small-2 align-middle margin-horizontal-0">
+								<img src="img/avat5.png" class="comentario-img">
+							</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0">CataNa: Que ricooo!! Quiero probarlo...</div>
+						</div>
+
+					</div>
+
+				</article>
+
+			</section>
       </div>
     </div>
 
