Blog Gastronomia Foundation
Ultimos cambios de estilos y revision de responsive

--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogFoundationGastronomia/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogFoundationGastronomia/index.html
@@ -26,7 +26,7 @@
 
   			<section class="column medium-5 large-4 hide-for-small-only margin-top-1">
 
-  				<aside class="card padding-1" id="busqueda" style="color: #331900">
+  				<aside class="card padding-1" id="busqueda" style="color: #992600">
 
   					<form class="buscador">
   						<div class="input-group">
@@ -82,10 +82,10 @@
 					<div class="row">
 
 						<div class="column small-12">
-							<h4>Bollito de Maíz </h4>
-							<strong>25/07/2018, Puerto Ordaz</strong>
+							<h4 style="color: #992600">Bollito de Maíz </h4>
+							<h6>25/07/2018, Puerto Ordaz</h6>
 							<img src="img/bollo.jpg">
-							<p class="text-justify margin-top-1">
+							<p class="text-justify margin-top-1" style="color: #663100">
 								El jojoto tierno es la base de muchas preparaciones en nuestra hermosa tierra, aquí amamos las masas a base de maíz, las cachapas, arepas, hallaquitas, bollitos, hallacas son todas diversas derivaciones de los procesos que tiene el maíz, en el caso del maíz tierno y amarillo lo usamos como baso para la cachapa, que se hace en budare y se rellena o para hacer la cachapa de hoja, que es el resultado de una masa que se envuelve en la misma hoja del jojoto tierno y se amarra para que no se salga la masa del interior mientras se cocina en agua hirviendo.<br><br>
 								Esta versión es la que llamamos también hallaquitas de jojoto, son en realidad dulzonas, pues nuestro maíz tierno es de sabor suave y se combina deliciosamente con un poco de dulce, luego al estar listas su sabor se realza con un poco de mantequilla y queso, son riquísimas para el desayuno.<br><br>
 								Ingredientes:<br>
@@ -108,7 +108,7 @@
 						  <fieldset>
 								<legend>Deja tus comentarios:</legend>
 								<textarea class="margin-bottom-0"></textarea>
-								<div class="text-right"><button type="submit" name="enviar" class="success button margin-top-0"><i class="step fi-pencil"></i> Publicar</button></div>
+								<div class="text-right"><button type="submit" name="enviar" class="alert button margin-top-0"><i class="step fi-pencil"></i> Publicar</button></div>
 						  </fieldset>
 					</div>
 
@@ -118,7 +118,7 @@
 							<div class="column small-2 align-middle margin-horizontal-0">
 								<img src="img/avat8.png" class="comentario-img">
 							</div>
-							<div class="column small-10 align-self-middle margin-horizontal-0">Aquilino33: Se puede rellenar con Chorizo??</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0"><strong>Aquilino33:</strong> Se puede rellenar con Chorizo??</div>
 						</div>
 
 					</div>
@@ -129,7 +129,7 @@
 							<div class="column small-2 align-middle margin-horizontal-0">
 								<img src="img/avat3.png" class="comentario-img">
 							</div>
-							<div class="column small-10 align-self-middle margin-horizontal-0">FercyzK: Los mejores los hace la tia de Natasha</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0"><strong>FercyzK:</strong> Los mejores los hace la tia de Natasha</div>
 						</div>
 
 					</div>
@@ -140,7 +140,7 @@
 							<div class="column small-2 align-middle margin-horizontal-0">
 								<img src="img/avat7.png" class="comentario-img">
 							</div>
-							<div class="column small-10 align-self-middle margin-horizontal-0">NatashaJones: Esa receta me la dio mio tia y la compartí en el Blog</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0"><strong>NatashaJones:</strong> Esa receta me la dio mio tia y la compartí en el Blog</div>
 						</div>
 
 					</div>
@@ -152,10 +152,10 @@
 					<div class="row">
 
 						<div class="column small-12">
-							<h4>Ossobuco</h4>
-							<strong>16/05/2018, Puerto Ordaz</strong>
+							<h4 style="color: #992600">Ossobuco</h4>
+							<h6>16/05/2018, Puerto Ordaz</h6>
 							<img src="img/osso.jpg">
-							<p class="text-justify margin-top-1">
+							<p class="text-justify margin-top-1" style="color: #663100">
 								El ossobuco alla milanese (a veces se escribe como osso buco, en italiano ‘hueso [con] hueco’; esta palabra compuesta se encuentra castellanizada como osobuco)1 es un plato tradicional de la cocina italiana que se puede encontrar en Milán (capital de Lombardía), ciudad de Italia, de donde es originario.2 Desde la segunda mitad del siglo XX se ha convertido en un plato también muy frecuente en diversas partes del mundo.<br><br>
 								Para esta receta necesitaremos 200 gramos de cebolla larga, cuatro tomates medianos, una cebolla blanca, una pizca de pasta de ajo, una pizca de comino, una pizca de sal y una pizca de pimienta<br><br>
 								Se trata de un guiso preparado con jarrete de ternera, corte transversal del corvejón de la res, en rodajas de gran grosor (de al menos 3 cm) y sin deshuesar. A menudo se sirve acompañado de risotto (una preparación de arroz), por regla general risotto alla milanese.<br><br>
@@ -171,7 +171,7 @@
 						  <fieldset>
 								<legend>Deja tus comentarios:</legend>
 								<textarea class="margin-bottom-0"></textarea>
-								<div class="text-right"><button type="submit" name="enviar" class="success button margin-top-0"><i class="step fi-pencil"></i> Publicar</button></div>
+								<div class="text-right"><button type="submit" name="enviar" class="alert button margin-top-0"><i class="step fi-pencil"></i> Publicar</button></div>
 						  </fieldset>
 					</div>
 
@@ -181,7 +181,7 @@
 							<div class="column small-2 align-middle margin-horizontal-0">
 								<img src="img/avat2.png" class="comentario-img">
 							</div>
-							<div class="column small-10 align-self-middle margin-horizontal-0">UlisesT: Se ve excelente, donode puedo probar esa exquisites?</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0"><strong>UlisesT:</strong> Se ve excelente, donode puedo probar esa exquisites?</div>
 						</div>
 
 					</div>
@@ -192,7 +192,7 @@
 							<div class="column small-2 align-middle margin-horizontal-0">
 								<img src="img/avat6.png" class="comentario-img">
 							</div>
-							<div class="column small-10 align-self-middle margin-horizontal-0">ChompiraX: Alguna receta sobre ese manjar?</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0"><strong>ChompiraX:</strong> Alguna receta sobre ese manjar?</div>
 						</div>
 
 					</div>
@@ -203,7 +203,7 @@
 							<div class="column small-2 align-middle margin-horizontal-0">
 								<img src="img/avat5.png" class="comentario-img">
 							</div>
-							<div class="column small-10 align-self-middle margin-horizontal-0">CataNa: Que ricooo!! Quiero probarlo...</div>
+							<div class="column small-10 align-self-middle margin-horizontal-0"><strong>CataNa:</strong> Que ricooo!! Quiero probarlo...</div>
 						</div>
 
 					</div>
