Blog Turismo Materialize
Entrada Blog

--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/index.html
@@ -62,7 +62,35 @@
 			</div>
 		</div>
 
+    <div class="row">
+		  <div class="col m9">
+        <div class="card">
+  				<div class="card-image">
+            <img class="materialboxed responsive-img"  src="img/colt.jpg">
+            <h5>Colonia Tovar - El Corazón Alemán en Venezuela</h5>
+          </div>
+  				<div class="chip">
+  				      Octubre de 2018
+  					<i class="material-icons right">event</i>
+  				</div>
+  				<div class="chip">
+      			   Venezuela
+      		  <i class="material-icons right">location_on</i>
+      		</div>
+          <div class="card-content">
+            <p>La Colonia Tovar es una población de Venezuela, capital del municipio Tovar, en el estado Aragua. Fundada en 1843 por un grupo de inmigrantes alemanes provenientes del entonces independiente estado de Baden (luego incorporado a Alemania). Se caracteriza por mantener la impronta cultural de su origen, por lo que es llamada «la Alemania del Caribe» o «El pueblo alemán de Venezuela». Es famosa por su cultura, por su clima templado y por la cordialidad de su gente.<br><br>
+        		Depende básicamente de la agricultura —donde destacan cultivos de clima templado como duraznos, fresas, remolacha, coliflor, zanahoria, repollo, acelga, brócoli, lechuga, cebollín y papas— y del turismo, y está ubicada a 42 km al oeste de Caracas y a una altura de casi 2000 metros sobre el nivel del mar. Cuenta con una gastronomía alemana muy variada, siendo su plato principal los diferentes tipos de embutidos como las salchichas. A partir de 1990 ha mostrado una alta tasa de crecimiento demográfico, pasando de 3373 a 14 672 habitantes en 2011.<br><br>
+        		<strong>Danzas típicas y celebraciones</strong><br><br>
+        		<strong>Oktoberfest-Festival de la Cerveza.</strong> En la Colonia Tovar se celebra anualmente en octubre la tradicional fiesta germana conocida como Oktoberfest. En algunas ocasiones han sido invitados grupos procedentes de Alemania para interpretar música típica. También se realiza el Festival Internacional de Música de Cámara Colonia Tovar.<br><br>
+        		<strong>Los Carnavales.</strong> Durante el carnaval, se realizan las comparsas de Jokilis y Gorilas. El Jokili es un personaje que existe en Alemania desde 1782, una mezcla de bufón y arlequín. Su vestimenta está constituida por un traje rojo, con flecos en cuello, mangas, cintura y piernas, en las que se dejan ver campanillas. Se les coloca un gorro de tres puntas, guantes blancos y zapatos puntiagudos. También poseen una máscara de madera, hecha para cada Jokili en particular. Una vara tallada en madera, que lleva una soga anudada y en el otro extremo una vejiga de cochino, en forma de globo, es el instrumento con el que suelen golpear a los curiosos que los observan en esta festividad<br><br>
+        		<strong>Fiestas Patronales en honor a San Martín de Tours.</strong> El patrono de todos los viajeros, San Martín, es homenajeado el 11 de noviembre. En la Iglesia, se encuentra una imagen del santo, que fue traída por los fundadores desde Baden. Ese día se realiza también la Feria de las Flores, Frutos y Artesanías, en la que se otorgan premios a la excelencia de los productos que se producen en el municipio.
+        		</p>
+          </div>
+    		</div>
+    	</div>
+    </div>
   </div>
+
 
 
 
