--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/index.html
@@ -24,10 +24,10 @@
 			</div>
 
 			<div class="nav-content col s9 m8 right-align">
-				<a class="waves-effect waves-light btn blue darken-4" href="#"><i class="material-icons left">home</i><span class="hide-on-small-and-down">Inicio</span></a>
-				<a class="waves-effect waves-light btn blue darken-4" href="#"><i class="material-icons left">location_on</i><span class="hide-on-small-and-down">Estuve En...</span></a>
-				<a class="waves-effect waves-light btn blue darken-4" href="#"><i class="material-icons left">grade</i><span class="hide-on-small-and-down">Mejores Viajes</span></a>
-				<a class="waves-effect waves-light btn blue darken-4" href="#"><i class="material-icons left">chat_bubble</i><span class="hide-on-small-and-down">Recomendaciones</span></a>
+				<a class="waves-effect waves-light btn blue darken-4" id="btn_nav" href="#"><i class="material-icons left">home</i><span class="hide-on-small-and-down">Inicio</span></a>
+				<a class="waves-effect waves-light btn blue darken-4" id="btn_nav" href="#"><i class="material-icons left">location_on</i><span class="hide-on-small-and-down">Estuve En...</span></a>
+				<a class="waves-effect waves-light btn blue darken-4" id="btn_nav" href="#"><i class="material-icons left">grade</i><span class="hide-on-small-and-down">Mejores Viajes</span></a>
+				<a class="waves-effect waves-light btn blue darken-4" id="btn_nav" href="#"><i class="material-icons left">chat_bubble</i><span class="hide-on-small-and-down">Recomendaciones</span></a>
       </div>
 		</header>
 
@@ -87,7 +87,36 @@
         		</p>
           </div>
     		</div>
-    	</div>
+      <div class="row card blue lighten-1 white-text">
+
+					<form class="col s12">
+						<h5>Deja tu comentario</h5>
+						<div class="row">
+							<div class="input-field col s6">
+								<i class="material-icons prefix">account_circle</i>
+								<input id="icon_person" type="text" class="validate">
+								<label for="icon_person">Nombre</label>
+							</div>
+							<div class="input-field col s6">
+								<i class="material-icons prefix">mail</i>
+								<input id="icon_mail" type="tel" class="validate">
+								<label for="icon_mail">Correo electroníco</label>
+							</div>
+						</div>
+						<div class="input-field col s12">
+							<i class="material-icons prefix">comment</i>
+							<textarea id="textarea1" class="materialize-textarea"></textarea>
+						  	<label for="textarea1"><label for="textarea1">Comentario</label></label>
+						</div>
+					</form>
+
+        			<div class="row align-left">
+        				<div class="col s12 m12">
+        					<button class="waves-effect waves-teal btn secondary-content" id="btn_send" type="submit" name="action" id="enviar">Enviar<i class="material-icons right">send</i></button>
+        				</div>
+        			</div>
+      	</div>
+      </div>
     </div>
   </div>
 
