Blog Turismo Materialize
Perfil del Autor y ultimos detalles de responsive

--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/index.html
@@ -99,7 +99,7 @@
 							</div>
 							<div class="input-field col s6">
 								<i class="material-icons prefix">mail</i>
-								<input id="icon_mail" type="tel" class="validate">
+								<input id="icon_mail" type="email" class="validate">
 								<label for="icon_mail">Correo electroníco</label>
 							</div>
 						</div>
@@ -112,11 +112,26 @@
 
         			<div class="row align-left">
         				<div class="col s12 m12">
-        					<button class="waves-effect waves-teal btn secondary-content" id="btn_send" type="submit" name="action" id="enviar">Enviar<i class="material-icons right">send</i></button>
+        					<button class="waves-effect waves-teal btn secondary-content" id="btn_send" type="submit" name="action" id="enviar">Enviar</button>
         				</div>
         			</div>
       	</div>
       </div>
+
+      <div class="col s10 m3 offset-s1">
+
+				<div class="row card">
+					<div class="col m12 center-align" style="padding-top: 5px">
+						<img class="circle" width="50%" src="img/avar.jpg">
+						<h5>Perfil del Autor</h5>
+						<div class="divider"></div>
+						<p>
+						Economista de Profesión, desde niño siempre ha estado interesado por el fascinante mundo de la tecnología, sobre todo en la computación. De modo autodidacta se adentró en el mundo del diseño gráfico y 3D, y ahora enfocado en el creciente mundo del desarrollo web, busca especializarse en el Desarrollo Web. Mediante este aprendizaje mezcla este fascinante conocimiento con uno de sus grandes hobbies, el de viajar, para traernos este vistoso blog.
+						</p>
+					</div>
+				</div>
+      </div>
+
     </div>
   </div>
 
