Estructuras Ciclicas y Condicionales JS

--- a/DesarrolloWeb/JavaScript/EstructurasCiclicas/index.html
+++ b/DesarrolloWeb/JavaScript/EstructurasCiclicas/index.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Estructuras Condicionales</title>
-    <script type="text/javascript" src="js/app.js"></script>
+    <title>Estructuras Ciclicas</title>
   </head>
   <body>
-
+    <script type="text/javascript" src="js/continue_ejercicio.js"></script>
   </body>
 </html>
