Closure Callbacks JS

--- a/DesarrolloWeb/JavaScript/ClosuresCallbacks/index.html
+++ b/DesarrolloWeb/JavaScript/ClosuresCallbacks/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Funciones Anonimas y Autoejecutables</title>
+    <title>Closures & Callbacks</title>
     <script type="text/javascript" src="js/app.js"></script>
   </head>
   <body>
